--- a/deps/Makefile
+++ b/deps/Makefile
@@ -5,9 +5,12 @@ DPKG_BUILD=dpkg-buildpackage -rfakeroot -uc -b -d
 # Can be run everywhere
 download-sources:
 	$(PIP_INSTALL) decorator
+	$(PIP_INSTALL) validictory==0.7.2
+
 
 
 # Should be run under scratchbox or on the device.
+# Running on desktop system will produce incompatible packages.
 build-debs: build-decorator
 
 build-decorator:
