--- a/deps/validictory/stdeb.cfg
+++ b/deps/validictory/stdeb.cfg
@@ -2,4 +2,5 @@
 XS-Python-Version: 2.5 
 Source: python-validictory
 Package: python-validictory
-Section: python
+Section: programming
+Depends: python2.5
