--- a/deps/decorator/stdeb.cfg
+++ b/deps/decorator/stdeb.cfg
@@ -2,4 +2,5 @@
 XS-Python-Version: 2.5 
 Source: python-decorator
 Package: python-decorator 
-Section: python
+Section: programming
+Depends: python2.5
