--- a/deps/gmusicapi/stdeb.cfg
+++ b/deps/gmusicapi/stdeb.cfg
@@ -3,4 +3,4 @@ XS-Python-Version: 2.5
 Source: python-gmusicapi
 Package: python-gmusicapi
 Section: programming
-Depends: python2.5, python-validictory, python-decorator, python-mutagen, python-protobuf
+Depends: python2.5, python-validictory, python-decorator, python-mutagen, python-protobuf, python-simplejson
