--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,8 @@ unexport CXXFLAGS
 unexport FFLAGS
 unexport LDFLAGS
 
+#exports specified using stdeb Setup-Env-Vars:
+export DH_OPTIONS=--buildsystem=python_distutils
 PATH := /usr/bin:$(PATH)
 SBOX_REDIRECT_IGNORE := $(SBOX_REDIRECT_IGNORE):/usr/bin/python
 export PATH SBOX_REDIRECT_IGNORE
@@ -20,4 +22,11 @@ export PATH SBOX_REDIRECT_IGNORE
 %:
 	dh $@
 
+
+binary: binary-indep
+
+binary-indep: build
+    dh binary-indep
+
+    dh_desktop
 
