--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -2,7 +2,7 @@
 XS-Python-Version: 2.5
 Source: pygpmp
 Package: pygpmp
-Maintainer: Michal Odnous
+Maintainer: Michal Odnous <odi.root@gmail.com>
 Section: multimedia
 Depends: python2.5, python-gmusicapi
 MIME-Desktop-Files: pygpmp.desktop
